[tool.poetry]
name = "map-explorer"
version = "0.1.0"
description = "Quick visualization of geographical locations"
authors = ["arnrxn"]
license = "MIT"
readme = "README.md"
packages = [{include = "map_explorer"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.2"
geopandas = "^0.14.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
