[tool.poetry]
name = "map-explorer"
version = "0.1.0"
description = "Quick visualization of geographical locations"
authors = ["arnrxn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.2"
geopandas = "^0.14.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"